--- a/README.adoc
+++ b/README.adoc
@@ -20,12 +20,13 @@ npm --save install oauth2-implicit
 
 ## API
 
-#### implicitGrant
+#### `implicitGrant`
 
 ```
 implicitGrant :: Options -> Credentials
 ```
 
+[[implicit-grant-options]]
 ##### `Options :: {}`
 
 Configure aspects of the Implicit Grant flow.
@@ -49,7 +50,7 @@ Optional redirect_uri that the Authorization Server should send the user back to
 Credentials extracted from the URI hash as put there by the Authorization Server redirection process. <<Credentials, Fields>>.
 
 
-### requestCredentials
+### `requestCredentials`
 ```
 requestCredentials :: Options -> null
 ```
@@ -57,11 +58,11 @@ requestCredentials :: Options -> null
 Make a fresh token request to the authorization server. Note that this function ***does not read the result following redirect***, so your application still needs to use either `implicitGrant()` or `.readCredentials()`. This function is useful if, for example, your app makes some API call to a Resource Server that returns an Authorization Server (AS) error ("invalid token" or "expired token") and you need to make a fresh request to get credentials from said AS.
 
 ##### `Options :: {}`
-See <<options, docs for implicitGrant>>.
+See <<implicit-grant-options, docs for `implicitGrant`>>.
 
 
 
-### readCredentials
+### `readCredentials`
 ```
 readCredentials :: -> Credentials | null
 ```
@@ -69,7 +70,7 @@ readCredentials :: -> Credentials | null
 Try clear the credentials from the URI Hash and return them as [`Credentials`](#credentials). If no credentials are found `null` is returned.
 
 
-### parseCredentials
+### `parseCredentials`
 ```
 parseCredentials :: String:URIHash -> Credentials
 ```
@@ -86,7 +87,7 @@ This library is designed in accordance with Implicit Grant flow as specified in 
 
 ## Types
 
-#### Credentials
+#### `Credentials`
 ```yaml
 accessToken : String
 tokenType   : String
