Treat state as an object that is serialized and deserialized. Closes #20.

--- a/README.adoc
+++ b/README.adoc
@@ -104,5 +104,5 @@ accessToken : String
 tokenType   : String
 expiresIn   : Number | null
 scope       : [String]
-state       : String | null
+state       : {*}
 ```
