--- a/README.adoc
+++ b/README.adoc
@@ -25,13 +25,13 @@ import authorize from 'oauth2-implicit'
 
 
 const credentials = authorize({
-  auth_uri: 'https://littlebitscloud.cc/oauth/authorize'
+  auth_uri: 'https://littlebitscloud.cc/oauth/authorize',
   client_id: 'cloudbit-visualizer',
   scope: ['read'],
   state: {
     location: window.location
   },
-})
+});
 ```
 
 
